--- a/index.nuevo.html
+++ b/index.nuevo.html
@@ -3,16 +3,19 @@
 <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de ropa</title>
+    
     <meta name="description" content="Tienda de ropa para mujeres">
     <meta name="keywords" content="ropa, moda, dama, ropa y moda">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="posicion.css">
+    <title>Tienda de ropa</title>
 </head>
 <body>
     <!--cabecera de la pagina-->
-    <header>
+    <header class="cabecera"> 
         <!--navegacion principal-->
-        <h1>R O M A</h1>
+        <h1>B A R B A R A</h1>
+
         <nav>
             
             <ul>
@@ -31,7 +34,7 @@
         <section>
             <h1>Ultima tendencias en moda</h1>
             <p>Descubre ultima tendencias en modo</p>
-            <img src="toji.jpeg" alt="Ropa para hombres">
+            <img src="bb.jpg" alt="Ropa para hombres">
         <section>
          <!--Section secundaria-->
         </section>
@@ -48,14 +51,14 @@
         </section>
     </div>
     <!--contenido relacionado con la pagina principal-->
-    <aside>
+    <aside >
         <h3>Que dicen nuestros clientes?</h3>
         <p>Excelente variedad</p>
     </aside>
     <!--pie de pagina-->
     <footer>
         <p>Copyright 2024, todos los derechos reservados</p>
-        <ul>
+        <ul >
             <li>
                 <a href="#">Terminos y condiciones</a>
             </li>
